<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.SignInActivity">

        <ImageView
            android:id="@+id/r7ch6hrxa8ni"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg_login"
            android:scaleType="fitXY"
            />
        <LinearLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/rmwx979rfzvo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/r5vs71k7r26c"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:src="@drawable/logo_larger"
                    android:scaleType="fitXY"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/r0oe0g8eysv7b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/primary_text"
                android:textSize="26sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/rjvmxwknt12n"
                android:textColor="#7C7C7C"
                android:textSize="15sp"
                android:layout_marginVertical="12dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/login_description"
                />
            <LinearLayout
                android:id="@+id/r7k92yc7zlw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/rkhufq0e9z9e"
                    android:textColor="#7C7C7C"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="4dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/email"
                    />
                <EditText
                    android:inputType="text"
                    android:hint="abc@gmail.com"
                    android:background="@null"
                    android:id="@+id/input_email"
                    android:textColor="#181725"
                    android:textSize="18sp"
                    android:layout_marginVertical="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    />
                <LinearLayout
                    android:id="@+id/rhiwn1zoezb6"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:gravity="center_horizontal"
                    android:background="#FFE2E2E2"
                    android:orientation="vertical">
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/r653v82pjlh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/rz2k8jghboz"
                    android:textColor="#7C7C7C"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="4dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/password"
                    />
                <EditText
                    android:inputType="text"
                    android:hint="*************"
                    android:background="@null"
                    android:id="@+id/input_password"
                    android:textColor="#181725"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    />
                <LinearLayout
                    android:id="@+id/rfq2fo7dt0u"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:gravity="center_horizontal"
                    android:background="#FFE2E2E2"
                    android:orientation="vertical">
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/rmbwav72x9o"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/rtug4memeip"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                </LinearLayout>
                <TextView
                    android:id="@+id/rmplplv9ed1p"
                    android:textColor="#181725"
                    android:textSize="14sp"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/forgot_password"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:gravity="center"
                android:background="@drawable/bg_primary"
                android:layout_marginVertical="16dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/rzujyavpot8b"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/login"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/rye536b0rym"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/rqewgvlhkygi"
                    android:textColor="#181725"
                    android:textSize="14sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/no_account"
                    />
                <TextView
                    android:id="@+id/btn_to_signup"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/sign_up"
                    />
            </LinearLayout>
        </LinearLayout>
</RelativeLayout>
