<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.account.SignUpActivity">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.jpatrick.mystore.ui.account.AuthViewModel" />
    </data>
    <RelativeLayout
        android:id="@+id/r7ch6hrxa8ni_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:id="@+id/r7ch6hrxa8ni"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg_login"
            android:scaleType="fitXY"
            />
        <LinearLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/rmwx979rfzvo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/r5vs71k7r26c"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:src="@drawable/logo_larger"
                    android:scaleType="fitXY"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/dgsd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/primary_text"
                android:textSize="26sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/rjvmxwknt12n"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/register_description"
                />
            <LinearLayout
                android:id="@+id/r7k92yc7zl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rkhufq0e9ze"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/username"
                    android:textColor="#7C7C7C"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <EditText
                    android:inputType="text"
                    android:hint="Jpatrick"
                    android:background="@null"
                    android:id="@+id/input_username"
                    android:textColor="#181725"
                    android:textSize="18sp"
                    android:text="@{viewModel.rUsername}"
                    android:layout_marginVertical="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    />
                <LinearLayout
                    android:id="@+id/rhiwn1zoezb"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:gravity="center_horizontal"
                    android:background="#FFE2E2E2"
                    android:orientation="vertical">
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/r7k92yc7zlw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rkhufq0e9z9e"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/email"
                    android:textColor="#7C7C7C"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <EditText
                    android:inputType="text"
                    android:hint="abc@gmail.com"
                    android:background="@null"
                    android:id="@+id/input_email"
                    android:textColor="#181725"
                    android:textSize="18sp"
                    android:text="@{viewModel.rEmail}"
                    android:layout_marginVertical="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    />
                <LinearLayout
                    android:id="@+id/rhiwn1zoezb6"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:gravity="center_horizontal"
                    android:background="#FFE2E2E2"
                    android:orientation="vertical">
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/r653v82pjlh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/rz2k8jghboz"
                    android:textColor="#7C7C7C"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="4dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/password"
                    />

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@null"
                    android:text="@{viewModel.rPassword}"
                    android:hint="*************"
                    android:inputType="text"
                    android:textColor="#181725"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/rfq2fo7dt0u"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:gravity="center_horizontal"
                    android:background="#FFE2E2E2"
                    android:orientation="vertical">
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:orientation="vertical">
                <TextView
                    android:textColor="#7C7C7C"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="4dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/confirm_password"
                    />
                <EditText
                    android:id="@+id/input_confirmPassword"
                    android:inputType="text"
                    android:hint="*************"
                    android:background="@null"
                    android:textColor="#181725"
                    android:textSize="18sp"
                    android:text="@{viewModel.rConfirmPassword}"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:gravity="center_horizontal"
                    android:background="#FFE2E2E2"
                    android:orientation="vertical">
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:gravity="center"
                android:background="@drawable/bg_primary"
                android:layout_marginVertical="16dp"
                android:onClick="@{()-> viewModel.onRegisterClicked()}"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rzujyavpot8b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/rye536b0rym"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/rqewgvlhkygi"
                    android:textColor="#181725"
                    android:textSize="14sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/have_account"
                    />

                <TextView
                    android:id="@+id/btn_to_signIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/sign_in"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>
